--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="icon" type="image/webp" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Traverse Globe - Your Travel Partner</title>
+    <link href="https://fonts.cdnfonts.com/css/the-season" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
